Modified html, css and js file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
         </div>
     </div>
 <!-- End Header -->
-
 <!-- Start Landing Section -->
 <div class="Landing" id="Home">
     <div class="container">
@@ -149,10 +148,11 @@
   &copy; 2022 <span id="copy-right"><a href="https://www.linkedin.com/in/youssef-mohamed-0a3819235/" target="_blank">Youssef</a></span> All Right Reserved
 </div>
 <!-- End Footer -->
-
+<!-- Start To Top Button -->
 <a href="#">
   <button id="button"><i class="fa-solid fa-up"></i></button>
 </a>
+<!-- End To Top Button -->
 
 
 <script src="main.js"></script>
