Update Portfolio css and html files

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="intro-text">
             <h2>Hello There!</h2>
             <p>I'm Youssef Mohamed,</p>
-            <p>Software Developer</p>
+            <p>Odoo Developer</p>
         </div>  
     </div>      
 </div>
@@ -73,6 +73,30 @@
     <h2 class="special-heading">Portfolio</h2>
     <p>Here are My Projects</p>
     <div class="portfolio-content">
+        <div class="card">
+          <img src="images/Screenshot from 2023-02-21 04-55-52.png" alt="">
+          <div class="info">
+            <h3>Hospital Management System in Odoo</h3>
+            <p>I have created this system in Odoo using Python and XML.</p>
+            <a href="https://github.com/Youssef-Mohamed-Gaber/Hospital_Management_System" target="_blank"><button>View Source Code</button></a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/download (1).png" alt="">
+          <div class="info">
+            <h3>Ping-Pong game using PYTHON</h3>
+            <p>This is a Ping-Pong game using Python with Turtle Library.</p>
+            <a href="https://github.com/Youssef-Mohamed-Gaber/Ping-Pong/blob/main/Ping-Pong.py" target="_blank"><button>View Source Code</button></a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/download.png" alt="">
+          <div class="info">
+            <h3>Web Scraping using PYTHON</h3>
+            <p>Web Scraping Project --scrape data from Wuzzuf website-- in python (BeautifulSoup, csv, zip_longest, requests modules).</p>
+            <a href="https://github.com/Youssef-Mohamed-Gaber/Web_Scraping/blob/main/Web_Scraping_with_Beautiful_Soup.py" target="_blank"><button>View Source Code</button></a>
+          </div>
+        </div>
         <div class="card">
           <img src="images/Screenshot (48).png" alt="">
           <div class="info">
@@ -117,9 +141,17 @@
           <img src="images/ce989c0dd688b3b99a31400129d2d211.jpg" alt="">
        </div> 
        <div class="text">
-          <p>Hi, I'm Youssef, I am Software Developer. I have tow year of experience in Software Development, and I have created some projects (a Template Using HTML and CSS, Another One Using HTML and CSS and JavaScript, A Simple To_Do_List in HTML, CSS and JavaScript, And Other Projects On GitHub), You can see them by clicking <a href="https://github.com/Youssef-Mohamed-Gaber?tab=repositories" target="_blank">here</a> .</p>
-          <hr>
-          <p>My Technical Skills: PYTHON - POSTGRESQL - HTML - CSS - JAVASCRIPT - COMMAND_LINE - GIT & GITHUB - ENGLISH. <br> My experience : 2 years</p>
+          <p>Hi, I'm Youssef, I am a software developer. I have a two-year experience 
+            in software development, and I have created some projects (Hospital 
+            Management System in Odoo Using Python and XML, Ping-Pong 
+            Game in Python, A template Using HTML, CSS and JavaScript, 
+            Another One Using HTML and CSS, And More Projects on GitHub), You can see them by clicking <a href="https://github.com/Youssef-Mohamed-Gaber?tab=repositories" target="_blank">here</a> .
+            <br>I'm an arabic native speaker, And my english writing and speaking skills are good.
+          </p>
+            <hr>
+          <p>My Technical Skills: Python - Odoo - XML - PostgreSQL - Rest API - HTML - CSS - JavaScript(Basics) - Agile & Scrum - Git & GitHub - Ubuntu OS.
+            <br> My experience : 2 years
+          </p>
       </div>
     </div>
   </div>  
@@ -145,7 +177,7 @@
 <!-- End Contact -->
 <!-- Start Footer -->
 <div class="footer">
-  &copy; 2022 <span id="copy-right"><a href="https://www.linkedin.com/in/youssef-mohamed-0a3819235/" target="_blank">Youssef</a></span> All Right Reserved
+  &copy; 2023 <span id="copy-right"><a href="https://www.linkedin.com/in/youssef-mohamed-0a3819235/" target="_blank">Youssef</a></span> All Right Reserved
 </div>
 <!-- End Footer -->
 <!-- Start To Top Button -->
