--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <img src="images/ce989c0dd688b3b99a31400129d2d211.jpg" alt="">
        </div> 
        <div class="text">
-          <p>Hi, I'm Youssef, I am a software developer. I have a two-year experience 
+          <p>Hi, I'm Youssef, I am an odoo developer. I have a two-year experience 
             in software development, and I have created some projects (Hospital 
             Management System in Odoo Using Python and XML, Ping-Pong 
             Game in Python, A template Using HTML, CSS and JavaScript, 
@@ -168,7 +168,7 @@
       <div class="social">
            Find Me On Social Networks :
           <a href="https://github.com/Youssef-Mohamed-Gaber" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=100044379443530" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://wa.me/+201151649142" target="_blank"><i class="fab fa-whatsapp"></i></a>
           <a href="https://www.linkedin.com/in/youssef-mohamed-0a3819235/" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
     </div>
@@ -177,7 +177,7 @@
 <!-- End Contact -->
 <!-- Start Footer -->
 <div class="footer">
-  &copy; 2023 <span id="copy-right"><a href="https://www.linkedin.com/in/youssef-mohamed-0a3819235/" target="_blank">Youssef</a></span> All Right Reserved
+  &copy; 2024 <span id="copy-right"><a href="https://www.linkedin.com/in/youssef-mohamed-0a3819235/" target="_blank">Youssef</a></span> All Right Reserved
 </div>
 <!-- End Footer -->
 <!-- Start To Top Button -->
